--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <img
           src="./images/header-image.png"
-          class="main-illustration"
+          class="header__main-illustration"
           alt="Изображение главное страницы">
         <div class="header__square-pic"></div>
       </header>
