--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="pages/index.css">
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -18,13 +17,13 @@
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
-          <a href="#" class="header__link">Узнать &rarr;</a>
+          <a class="header__link" href="#">Узнать &rarr;</a>
         </p>
         <img
           src="./images/header-image.png"
           class="header__main-illustration"
           alt="Изображение главное страницы">
-        <div class="header__square-pic"></div>
+        <div class="rotation header__square-pic"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -50,6 +49,62 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Книга Брианна Вист">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Античная скульптура мальчика">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Пересадочный узел Нью-Йоркского метро">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="Городская библиотека Штутгарта">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео нa TED</h2>
+          <p class=" section-subtitle">Для тех, кто любит прокрастинировать</p>
+          <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>"></iframe> 
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link">Подробнее &rarr;</a>
+          <img
+            src="./images/feynman.png"
+            class="feynman__illustration"
+            alt="Изображение Фейнмана">
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -99,14 +154,18 @@
             </li>
           </ul>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="#" class="feynman__link">Подробнее &rarr;</a>
-          <img
-            src="./images/feynman.png"
-            class="feynman__illustration"
-            alt="Изображение Фейнмана">
+        <section class="khan">
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h3 class="khan__title">Весь мир — школа</h3>
+            <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+          <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Книга автора Салман Хан">
+          <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+        </div>
+      </div>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -177,8 +236,31 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="rotation kaufman__triangle"></div>
         </section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li> 
+            <a class="resources__logo-link" href="#" target="_blank">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas">
+            </a>
+          </li>
+          <a class="resources__logo-link" href="#" target="_blank">
+            <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1">
+          </a>
+        </li>
+        <a class="resources__logo-link" href="#" target="_blank">
+          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Strelka">
+        </a>
+      </li>
+      <a class="resources__logo-link" href="#" target="_blank">
+        <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Polka">
+      </a>
+    </li>
+        </ul>
+      </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
@@ -211,7 +293,7 @@
                   <img
                     class="footer__social-icon"
                     src="./images/youtube-icon.svg"
-                    alt="Ютуб"/>YouTube
+                    alt="Ютуб">YouTube
                 </a>
               </li>
               <li>
@@ -219,7 +301,7 @@
                   <img
                     class="footer__social-icon"
                     src="./images/vk_color_white.svg"
-                    alt="ВКонтакте"/>ВКонтакте
+                    alt="ВКонтакте">ВКонтакте
                 </a>
               </li>
               <li>
@@ -227,7 +309,7 @@
                   <img
                     class="footer__social-icon"
                     src="./images/tiktok-icon.svg"
-                    alt="Тикток"/>TikTok
+                    alt="Тикток">TikTok
                 </a>
               </li>
             </ul>
