--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <h2 class="section-title">Видео нa TED</h2>
           <p class=" section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>"></iframe> 
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe title="YouTube video player" class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>"></iframe> 
+          <iframe title="YouTube video player" class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </section>
         <section class="oakley">
@@ -247,14 +247,17 @@
               <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas">
             </a>
           </li>
+          <li> 
           <a class="resources__logo-link" href="#" target="_blank">
             <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1">
           </a>
         </li>
+        <li> 
         <a class="resources__logo-link" href="#" target="_blank">
           <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Strelka">
         </a>
       </li>
+      <li> 
       <a class="resources__logo-link" href="#" target="_blank">
         <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Polka">
       </a>
